# Esp32FingerprintScanner

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  sdkconfig.old  setup.cmake
doc/: roadmap.md  specification.md
hardware/doorbell/frontplate/: klingel.FCStd
src/: CMakeLists.txt  app.c  app_handles.h  basictypes.h
src/ceh/: ceh.c  ceh.h
src/cli/: cli.c  cli.h
src/fpm/: fpm.h
src/fps/: fps.c  fps.h
src/io/: io.c  io.h
src/mqtt/: mqtt.c  mqtt.h
src/nvs/: nvs.c  nvs.h
src/telnet/: telnet.c  telnet.h
src/timer/: timer.c  timer.h
src/uart/: uart.c  uart.h
src/wdt/: wdt.c  wdt.h
src/wifi/: wifi.c  wifi.h
sub/FingerPrintModuleComponent/: CMakeLists.txt
tools/: toolchain.cmake
